[project]
name = "sparse_autoencoder"
description="Sparse autoencoder for GPT2"
version = "0.2"
authors = [{name = "OpenAI"}]
dependencies = [
    "torch ~= 2.3.0",
]
readme = "README.md"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparse_autoencoder*"]
